--- a/Task4/Task4.vcxproj.filters
+++ b/Task4/Task4.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Problem4.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\Downloads\task2 (4).cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
