--- a/Task6/Task6.vcxproj.filters
+++ b/Task6/Task6.vcxproj.filters
@@ -18,15 +18,15 @@
     <ClCompile Include="Problem1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Problem2.cpp">
+    <ClCompile Include="Problem2\Problem2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Fraction.cpp">
+    <ClCompile Include="Problem2\Fraction.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Fraction.h">
+    <ClInclude Include="Problem2\Fraction.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
