--- a/2nd_semester/Task2/Task2.vcxproj.filters
+++ b/2nd_semester/Task2/Task2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Problem2\Problem2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Problem3.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Clock\Clock.hpp">
