--- a/2nd_semester/Task2/Task2.vcxproj
+++ b/2nd_semester/Task2/Task2.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Sergey\Desktop\boost_1_78_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -146,6 +146,7 @@
     <ClCompile Include="..\Clock\Clock.cpp" />
     <ClCompile Include="Problem1.cpp" />
     <ClCompile Include="Problem2\Problem2.cpp" />
+    <ClCompile Include="Problem3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Clock\Clock.hpp" />
